// Code generated by chocoproto. DO NOT EDIT.
syntax = "proto3";

package example.proto.example;

import "google/protobuf/timestamp.proto";

import "openapiv3/annotations.proto";

option go_package = "github.com/syralon/entc-gen-go/example/proto/example;example";

message Group {
  int64 id = 1;

  string name = 2;

  google.protobuf.Timestamp created_at = 3;

  google.protobuf.Timestamp updated_at = 4;

  repeated User group_users = 5;
}

message User {
  int64 id = 1;

  // The user name
  string name = 2 [
    (openapi.v3.property) = { description: "The name" }
  ];

  // The created time
  google.protobuf.Timestamp created_at = 3;

  // The latest update time
  google.protobuf.Timestamp updated_at = 4;

  int64 group_id = 5;

  int32 status = 6;

  repeated Group user_groups = 7;
}
